	  functions now instead of additional folding after the call, also lead
	  to removing (user_func_upper) from codegen.c
	* typeck.c (cb_encode_program_id): check for path separators now backwards
	* typeck.c: removed duplicated code for program-id encoding
	  using libcob's new cob_encode_program_id with explicit check
	  for buffer size fixing bug #584

2019-08-14  Simon Sobisch <simonsobisch@gnu.org>

	* field.c, parser.y: verification of cb_synchronized_clause moved, only
	  set f->flag_synchronized if actually active
	* cobc.h, config.def: moved defines all CB_CONFIG_ANY entries to to new
	  enums: cb_binary_size_options, cb_binary_byteorder_options,
	  cb_assign_clause_options; used these instead of unsigned int
	* field.c (compute_binary_size): switch over cb_binary_size
	* typeck.c (cb_build_assignment_name): switch over cb_assign_clause

2019-08-12  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (scan_floating_numeric): fixed stack_overflow_buffer
	  reported by AddressSanitizer
	* reserved.c: TOP as mnemonic CB_FEATURE_FORMFEED
	* parser.y: added top_clause as we won't be able to define the mnemonic
	  as it duplicates a reserved word (FIXME: general adjustment needed)

2019-08-11  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l, config.def: added support for HP COBOL octal literals
	  unfinished as its type should be context-sensitive (so far chosen
	  by scanner.l), configured by dialect configuration hp-octal-literals
	* flag.def, cobc.c, help.c: moved -f[no-]ibmcomp out of flags.def and
	  activated the "non-flag" as "normal option"

2019-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (special_name_list): better error recovery (at least as long
	  as one valid SPECIAL-NAMES entry was found)

2019-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (emit_entry_goto, entry_name_list, entry_name),
	  typeck.c (cb_emit_goto_entry), config.def, tree.h,
	  codegen.c (output_goto, output_goto_entry): added extension